gitops/platform/cilium-resources/base/hubble-ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      k8s-app: hubble-ui
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "8081"
              protocol: TCP
          rules:
            http:
              - {}
